# QR-code-localization

./: readme.md
ep_qrcode/: CMakeLists.txt  package.xml
ep_qrcode/config/: ep_qrcode.yaml  qrcode_coordinate_table.txt
ep_qrcode/include/: MV_SC2005AM.hpp  ep_qrcode_utility.h  ep_qrcode_utility.hpp
ep_qrcode/install/: control  ep-qrcode.service  postinst  postrm  preinst  prerm  start.sh
ep_qrcode/launch/: ep_qrcode.launch
ep_qrcode/msg/: qrcodedebug.msg
ep_qrcode/src/: main.cpp
ep_qrcode_loc/: CMakeLists.txt  package.xml
ep_qrcode_loc/config/: .~lock.SiteTable.csv#  CaptureTable.csv  GroundCodeTable.txt  SiteTable.csv  SiteTable.txt  SiteTable_sh.csv  SiteTable_v1.txt  SiteTable_v2.txt  ep-qrcode-LidarMapTable.txt  ep-qrcode-QRCodeMapTable.txt  ep-qrcode-loc.yaml  ep-qrcode-loc_debug.yaml
ep_qrcode_loc/config/data/: 2.csv  4.csv  5.csv  config.csv
ep_qrcode_loc/config/data/output/: 1车-16列-出-1.csv  1车-16列-出-123.csv  1车-16列-出-2.csv  1车-16列-出-3.csv  1车-16列-进-1.csv  1车-16列-进-123.csv  1车-16列-进-2.csv  1车-16列-进-3.csv  1车-16列-进出-1.csv  1车-16列-进出-2.csv  1车-16列-进出-3.csv  1车-17列-出-1.csv  1车-17列-出-123.csv  1车-17列-出-2.csv  1车-17列-出-3.csv  1车-17列-进-1.csv  1车-17列-进-123.csv  1车-17列-进-2.csv  1车-17列-进-3.csv  1车-17列-进出-1.csv  1车-17列-进出-2.csv  1车-17列-进出-3.csv  1车原始数据.csv  2车-16列-出-1.csv  2车-16列-出-123.csv  2车-16列-出-2.csv  2车-16列-出-3.csv  2车-16列-进-1.csv  2车-16列-进-123.csv  2车-16列-进-2.csv  2车-16列-进-3.csv  2车-16列-进出-1.csv  2车-16列-进出-2.csv  2车-16列-进出-3.csv  2车-17列-出-1.csv  2车-17列-出-123.csv  2车-17列-出-2.csv  2车-17列-出-3.csv  2车-17列-进-1.csv  2车-17列-进-123.csv  (+72 more)
ep_qrcode_loc/config/v5/: ep-qrcode-loc.yaml
ep_qrcode_loc/config/v6/: ep-qrcode-QRCodeMapTable.txt
ep_qrcode_loc/config/v7/: ep-qrcode-LidarMapTable.txt
ep_qrcode_loc/config/北区测试跳变/: ep-qrcode-loc.yaml
ep_qrcode_loc/config/南区测试直行/: SiteTable.txt  ep-qrcode-QRCodeMapTable.txt  ep-qrcode-loc.yaml
ep_qrcode_loc/config/历史/v1/: Lidarmap_table.txt
ep_qrcode_loc/config/历史/v2/: Lidarmap_table.txt  qrcode_table.txt
ep_qrcode_loc/config/历史/v3/: ep-qrcode-QRCodeMapTable.txt  ep-qrcode-loc.yaml
ep_qrcode_loc/config/历史/v4/: ep-qrcode-LidarMapTable.txt  ep-qrcode-loc.yaml
ep_qrcode_loc/config/历史/v5/: Lidarmap_table.txt
ep_qrcode_loc/config/历史/v6/: ep-qrcode-loc.yaml
ep_qrcode_loc/config/历史/v7/: SiteTable.txt  ep-qrcode-QRCodeMapTable.txt
ep_qrcode_loc/config/历史/v8/: backup_table.txt  ep-qrcode-loc.yaml
ep_qrcode_loc/config/测试二维码偏转的影响/: ep-qrcode-LidarMapTable.txt  ep-qrcode-loc.yaml
ep_qrcode_loc/doc/: 二维码定位实施流程.md  单个二维码更换方法v2.md
ep_qrcode_loc/include/: BasicState.h  CameraFrame_msg.h  LocCamera.h  camera.hpp  div.hpp  err.hpp  polygon.hpp  qrcode_table.hpp  qrcode_table_v2.hpp  utility_qloc.hpp  wheel_odom.hpp  yaw_err.hpp
ep_qrcode_loc/install/: control  ep-qrcode-loc.service  make_deb.sh  postinst  prerm  start.sh  start_debug.sh
ep_qrcode_loc/launch/: debug.launch  run.launch
ep_qrcode_loc/lib/ep_vcs_sdk/: CMakeLists.txt
ep_qrcode_loc/lib/ep_vcs_sdk/common/: vcs_params.cpp  vcs_params.h  vcs_utils.cpp
ep_qrcode_loc/lib/ep_vcs_sdk/config/: config_info.cpp  config_service.cpp
ep_qrcode_loc/lib/ep_vcs_sdk/listen/: config_listener.cpp  config_monitor.cpp
ep_qrcode_loc/lib/ep_vcs_sdk/security/: security_manager.cpp
ep_qrcode_loc/log/: .~lock.Main2024-8-30_18:13:37.862156.csv#  Main2024-5-19_13:43:48.2645_mark.txt  Main2024-5-20_14:37:43.567232.csv  Main2024-5-22_10:6:31.046873.csv  Main2024-5-22_13:16:36.020996.csv  Main2024-5-22_13:9:20.366501.csv  Main2024-5-22_14:42:58.960896.csv  Main2024-5-22_14:53:0.484786.csv  Main2024-5-22_15:0:27.435203.csv  Main2024-5-22_16:19:41.368765.csv  Main2024-5-22_16:37:41.913233.csv  Main2024-5-22_8:39:47.375463.csv  Main2024-5-22_8:50:48.353660.csv  Main2024-5-22_9:11:34.848584.csv  Main2024-5-22_9:33:58.221571.csv  Main2024-5-22_9:3:50.111028.csv  Main2024-5-22_9:51:45.062856.csv  Main2024-5-22_9:51:6.277106.csv  Main2024-6-14_18:32:26.152533.csv  Main2024-6-14_19:36:52.085249.csv  Main2024-6-14_19:49:31.044504.csv  Main2024-6-14_19:55:4.606097.csv  Main2024-6-14_19:59:17.716129.csv  Main2024-6-14_20:19:55.393634.csv  Main2024-6-14_20:23:47.327605.csv  Main2024-6-14_20:27:4.177322.csv  Main2024-6-14_20:34:34.069850.csv  Main2024-6-14_20:39:23.181909.csv  Main2024-6-14_20:46:34.548504.csv  Main2024-6-4_11:0:42.103691.csv  Main2024-6-4_11:12:15.919075.csv  Main2024-6-4_14:55:30.786814.csv  Main2024-6-4_16:13:17.005887.csv  Main2024-6-5_20:33:27.072651.csv  Main2024-6-5_20:50:16.781485.csv  Main2024-6-5_20:54:8.467448.csv  Main2024-6-5_20:57:53.247963.csv  Main2024-6-5_21:9:2.956986.csv  Main2024-6-5_8:33:15.765242.csv  Main2024-6-5_8:51:12.446140.csv  (+30 more)
ep_qrcode_loc/msg/: CameraFrame_msg.msg
ep_qrcode_loc/script/: broadcast_static_transform.py  calib.py  cvs.py  data.txt
ep_qrcode_loc/script/changeQRcode/: changeQRcodeTool.py  your_document.txt
ep_qrcode_loc/sh/: record.sh
ep_qrcode_loc/src/: QRCodeLoc.cpp  QRCodeLoc.hpp  camera.cpp  camera.hpp  logger.cpp  logger.hpp  main.cpp  qrcode_table.cpp  qrcode_table.hpp  qrcode_table_v2.cpp  qrcode_table_v2.hpp  utility_qloc.cpp  utility_qloc.hpp  wheel_odom.hpp
ep_qrcode_loc/src/ep_vcs_sdk/: vcs_manager.cpp  vcs_manager.h
ep_qrcode_loc/src/middle/: QRCodeLoc.cpp  QRCodeLoc.hpp
ep_qrcode_loc/src/mode/: Mode.hpp  Mode_AssistedDriving.cpp  Mode_CalYawErr.cpp  Mode_Calibration.cpp  Mode_CheckCameraHorizon.cpp  Mode_CollectQRCodeIndex.cpp  Mode_CollectQRCodePose.cpp  Mode_GetYaw.cpp  Mode_North.cpp  Mode_ShiHua.cpp  Mode_TestRun.cpp  Mode_Trash.cpp
ep_qrcode_loc/src/module/: ParamServer.cpp  ParamServer.hpp  QRCodeLoc.cpp  QRCodeLoc.hpp  calibration.hpp  camera.cpp  camera.hpp  logger.cpp  logger.hpp  qrcodeTable.cpp  qrcodeTable.hpp  qrcodeTable_v1.cpp  qrcodeTable_v1.hpp  qrcodeTable_v2.cpp  qrcodeTable_v2.hpp  qrcodeTable_v3.cpp  qrcodeTable_v3.hpp  qrcode_table.cpp  qrcode_table.hpp  qrcode_table_v2.cpp  qrcode_table_v2.hpp  qrcode_table_v3.cpp  qrcode_table_v3.hpp  subMsg.cpp  utilityQloc.cpp  utilityQloc.hpp  utility_qloc.cpp  utility_qloc.hpp  wheelOdom.cpp  wheelOdom.hpp  wheel_odom.cpp  wheel_odom.hpp
(+104 files in other folders)
